# Ketaroller

./: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile.in  Info.plist  KetaRollerCPack.cmake  Mainpage.dox
cmake/modules/: FindAlsa.cmake  FindPThread.cmake  InstallSettings.cmake  KetaRollerPlugin.cmake  pluginfactory.h.cmake
doc/: 01 - Introduction.dox  02 - DesignChoices.dox  03 - BasicConcepts.dox  04 - KetaRollerUsage.dox  05 - CreatingPlugins.dox  06 - PluginDoc.dox  07 - BuildingFromSource.dox  Mainpage.dox  frontespizio POLIMI Latex.tex  poli_header.tex  tuio_schema.xmi
doc/img/: logo-polimi.eps
examples/: CMakeLists.txt  tuiogestureexample.cpp  tuiogestureexample.h
gui/: CMakeLists.txt  ConfigWindow.cpp  ConfigWindow.h  FiducialWidget.cpp  FiducialWidget.h  MIDIWidget.cpp  MIDIWidget.h  MainWindow.cpp  MainWindow.h  configUi.ui  fiducialWidget.ui  main.cpp  midiWidget.ui  window1.ui
plugins/: CMakeLists.txt
plugins/bct/: BctOutputDevice.cpp  BctOutputDevice.h  CMakeLists.txt  bctnetworkprotocol.cpp  bctnetworkprotocol.h
plugins/midi/: CMakeLists.txt  MIDIInputDevice.cpp  MIDIInputDevice.h  MIDIMessage.cpp  MIDIMessage.h  MIDIOutputPort.cpp  MIDIOutputPort.h
plugins/tuio/: CMakeLists.txt  FiducialObject.cpp  FiducialObject.h  TuioConnection.cpp  TuioConnection.h  TuioInputDevice.cpp  TuioInputDevice.h  TuioInputPort.cpp  TuioInputPort.h  TuioOutputPort.cpp  TuioOutputPort.h
src/: AbstractDevice.cpp  AbstractDevice.h  AbstractDevice_p.h  AbstractPluginFactory.cpp  AbstractPluginFactory.h  BaseSignal.cpp  BaseSignal.h  CMakeLists.txt  Connection.cpp  Connection.h  GestureConnection.cpp  GestureConnection.h  GestureOutputPort.cpp  GestureOutputPort.h  GesturedInputDevice.cpp  GesturedInputDevice.h  InputDevice.cpp  InputDevice.h  InputDevice_p.h  InputPort.cpp  InputPort.h  OutputDevice.cpp  OutputDevice.h  OutputPort.cpp  OutputPort.h  OutputPort_p.h  PluginLoader.cpp  PluginLoader.h  Port.cpp  Port.h  Port_p.h  config-ketaroller.cpp  config-ketaroller.h.in  ketaroller-export.h
src/KetaRoller/: AbstractDevice  AbstractPluginFactory  CMakeLists.txt  InputDevice  InputPort  OutputDevice  OutputPort  PluginLoader  Port
tests/: CMakeLists.txt  testmidiports.cpp  testmidiports.h  testpluginload.cpp  testpluginload.h  testtuioports.cpp  testtuioports.h
tests/manual/: CMakeLists.txt  midimanualtest.cpp  midimanualtest.h  tuioportstofiducialstest.cpp  tuioportstofiducialstest.h  tuioreactivisionmanualtest.cpp  tuioreactivisionmanualtest.h
tuioredirector/: CMakeLists.txt  main.cpp
